fixed landing page containers as prior the heading was causing containers to overlap

--- a/src/index.css
+++ b/src/index.css
@@ -10,14 +10,13 @@
 
   }
   
-.landing{
-
-  height: 100vh;
+.landing-header-container
+{
+  height: 8vh;
   max-width: 100vw;
   font-family: 'Arimo', sans-serif;
+
 }
-
-
 
 
 .box{
@@ -31,12 +30,15 @@
 }
 
 #landing-heading{
-  height: 8vh;
+  display: flex;
+  flex-direction: column;
   background-color: white;
   /* border: 1px solid black; */
-  width: 700px;
+  width: 100vw;
   position:fixed;
-  top:0;
+  z-index: 100;
+
+  border-bottom: 1px solid black;
 }
 
 #landing-h1{
@@ -52,10 +54,7 @@
 #card-links{
   display: flex;
   justify-content: space-evenly;
-
-
   width: 700px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.100);
   /* border: 1px solid black; */
 }
 
@@ -111,11 +110,14 @@
 
 
 #Home-Container{
+  margin-top: 10px;
+  height: 92vh;
   text-align: center;
   /* background-color: black; */
   color: #00aff2;
-  margin-top: 100vh;
-  height: 190vh;
+  background-color: black;
+
+  /* border: 1px solid black; */
 }
 
 
@@ -147,14 +149,12 @@
 
 /* Greensock 'card' or page */
 #GS-MTM-Card{
-
   display: none;
-
 }
 
 #GS-MTM-Container{
-  margin-top: 10vh;
-  height: 90vh;
+
+
 }
 
 #GS-MTM-Container-h1{
@@ -167,7 +167,7 @@
 #GS-MTM-Card-h1{
   color: #00aff2;
   font-size: 55px;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   position: relative;
   top: 110px;
 } 
